Added special cases for T-E; corrected spacing for vv.439 & 523

--- a/appendix2-T-E.qmd
+++ b/appendix2-T-E.qmd
@@ -49,6 +49,16 @@ process_line <- function(line) {
       return("<div style='line-height: 1.2;'>Nonpas p bone ente [] cio</div>")
     }  
       
+    # SPECIAL CASE: Hard-code line v.439 to correct spacing
+    if (line_count == 439) {
+      return("<div style='line-height: 1.2;'>Virge roine jo croi bien</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.523 to fix "Virge Roine" spacing
+    if (line_count == 523) {
+      return("<div style='line-height: 1.2;'>Virge Roine coronee</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.703 to correct nesting/repetition issue
     if (line_count == 703) {
       return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>O</span>rlairomes ci demarie</div>")
@@ -160,9 +170,134 @@ process_line <- function(line) {
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
     
+    # SPECIAL CASE: Hard-code line v.5 to correct apostrophe
+    if (line_count == 5) {
+      return("<div style='line-height: 1.2;'>Bien croi que volentiers lorront</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.38 to correct apostrophe
+    if (line_count == 38) {
+      return("<div style='line-height: 1.2;'>tant quil sent al cuer lamort</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.65 to correct apostrophe
+    if (line_count == 65) {
+      return("<div style='line-height: 1.2;'>Por ce quel est tant bele & gente</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.78 to correct apostrophe
+    if (line_count == 78) {
+      return("<div style='line-height: 1.2;'>Nient plus quun trespas de vent</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.94 to correct apostrophe
+    if (line_count == 94) {
+      return("<div style='line-height: 1.2;'>Jamais anul jor nen ert lies</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.95 to correct apostrophe
+    if (line_count == 95) {
+      return("<div style='line-height: 1.2;'>& maldist tote saventure</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.99 to correct apostrophe
+    if (line_count == 99) {
+      return("<div style='line-height: 1.2;'>tresquele avoit passe -xii- anz</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.104 to correct apostrophe
+    if (line_count == 104) {
+      return("<div style='line-height: 1.2;'>puis noirent parler de li</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.114 to correct apostrophe
+    if (line_count == 114) {
+      return("<div style='line-height: 1.2;'>des jovencels avoit lamor</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.131 to correct apostrophe
+    if (line_count == 131) {
+      return("<div style='line-height: 1.2;'>Que devant sen huis en lentree</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.133 to correct apostrophe
+    if (line_count == 133) {
+      return("<div style='line-height: 1.2;'>par ce quil erent si ami</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.136 to correct apostrophe
+    if (line_count == 136) {
+      return("<div style='line-height: 1.2;'>Sentredonoient grant colees</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.204 to correct apostrophe
+    if (line_count == 204) {
+      return("<div style='line-height: 1.2;'>lamoient tot por sa biaute</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.212 to correct apostrophe
+    if (line_count == 212) {
+      return("<div style='line-height: 1.2;'>Quele ert de haut parente</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.260 to correct apostrophe
+    if (line_count == 260) {
+      return("<div style='line-height: 1.2;'>Si com lemenoit saventure</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.272 to correct apostrophe
+    if (line_count == 272) {
+      return("<div style='line-height: 1.2;'>Ci sui venue dautre regne</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.294 to correct apostrophe
+    if (line_count == 294) {
+      return("<div style='line-height: 1.2;'>Tres quil vindrent en haute mer</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.352 to correct apostrophe
+    if (line_count == 352) {
+      return("<div style='line-height: 1.2;'>por co quele ert bele & gente</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.357 to correct apostrophe
+    if (line_count == 357) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='1'>L</span>i jors vint de lAcension</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.359 to correct apostrophe
+    if (line_count == 359) {
+      return("<div style='line-height: 1.2;'>des pelerins doutre lemer</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.366 to fix "]cio(n)" repetition
     if (line_count == 366) {
       return("<div style='line-height: 1.2;'>Nonpas par bone enten [] cion</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.370 to correct apostrophe
+    if (line_count == 370) {
+      return("<div style='line-height: 1.2;'>o eus neust ja compaignie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.386 to correct apostrophe
+    if (line_count == 386) {
+      return("<div style='line-height: 1.2;'>Que doit quele nipuet entrer</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.439 to correct spacing
+    if (line_count == 439) {
+      return("<div style='line-height: 1.2;'>Virge roine jo croi bien</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.477 to correct apostrophe
+    if (line_count == 477) {
+      return("<div style='line-height: 1.2;'>dist quil estoit li Aignels Dei</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.523 to fix "Virge Roine" spacing
+    if (line_count == 523) {
+      return("<div style='line-height: 1.2;'>Virge Roine coronee</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.646 to remove apostrophe in "qu'il"
@@ -183,6 +318,126 @@ process_line <- function(line) {
     # SPECIAL CASE: Hard-code line v.703 to correct nesting/repetition issue
     if (line_count == 703) {
       return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>O</span>r lairommes ci demarie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.714 to correct apostrophe
+    if (line_count == 714) {
+      return("<div style='line-height: 1.2;'>Navoient pas vestu stamine</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.729 to correct apostrophe
+    if (line_count == 729) {
+      return("<div style='line-height: 1.2;'>Navoient soig dargent ne dor</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.750 to correct apostrophe
+    if (line_count == 750) {
+      return("<div style='line-height: 1.2;'>Quil cremissent de lor maison</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.819 to correct apostrophe
+    if (line_count == 819) {
+      return("<div style='line-height: 1.2;'>& vit que nul nen pot trover</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.820 to correct apostrophe
+    if (line_count == 820) {
+      return("<div style='line-height: 1.2;'>Not corage davant aler</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.832 to correct apostrophe
+    if (line_count == 832) {
+      return("<div style='line-height: 1.2;'>Qui plus valoit cargent neor</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.844 to correct apostrophe
+    if (line_count == 844) {
+      return("<div style='line-height: 1.2;'>tant ert blance com flor despine</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.845 to correct apostrophe
+    if (line_count == 845) {
+      return("<div style='line-height: 1.2;'>li blanc cevoil nierent trecies</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.872 to correct apostrophe
+    if (line_count == 872) {
+      return("<div style='line-height: 1.2;'>Son vis nosa torner vers lomme</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.883 to correct apostrophe
+    if (line_count == 883) {
+      return("<div style='line-height: 1.2;'>de lautre part Marie estoit</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.926 to correct apostrophe
+    if (line_count == 926) {
+      return("<div style='line-height: 1.2;'>par la barbe quil ot chenue</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.944 to correct apostrophe
+    if (line_count == 944) {
+      return("<div style='line-height: 1.2;'>& li vins sans quen issi fors</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.947 to correct apostrophe
+    if (line_count == 947) {
+      return("<div style='line-height: 1.2;'>Car tu las servi de tenfance</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1008 to correct apostrophe
+    if (line_count == 1008) {
+      return("<div style='line-height: 1.2;'>bieaus chiers pare por coi ten vas</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1037 to correct apostrophe
+    if (line_count == 1037) {
+      return("<div style='line-height: 1.2;'>Endementres quele li conte</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1038 to correct apostrophe
+    if (line_count == 1038) {
+      return("<div style='line-height: 1.2;'>bien poes croi re quele ot honte</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1085 to correct apostrophe
+    if (line_count == 1085) {
+      return("<div style='line-height: 1.2;'>perequant tu maporteras</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1148 to correct apostrophe
+    if (line_count == 1148) {
+      return("<div style='line-height: 1.2;'>mais en cor nen iavoit mie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1224 to correct apostrophe
+    if (line_count == 1224) {
+      return("<div style='line-height: 1.2;'>par le sanc quissi de saplaie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1282 to correct apostrophe
+    if (line_count == 1282) {
+      return("<div style='line-height: 1.2;'>Quele navoit mangie de ble</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1360 to correct apostrophe
+    if (line_count == 1360) {
+      return("<div style='line-height: 1.2;'>pres ert delcors nen veoit mie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1364 to correct apostrophe
+    if (line_count == 1364) {
+      return("<div style='line-height: 1.2;'>Navant na riere nen irai</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1390 to correct apostrophe
+    if (line_count == 1390) {
+      return("<div style='line-height: 1.2;'>poi sen faloit que niert totnu</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1493 to correct apostrophe
+    if (line_count == 1493) {
+      return("<div style='line-height: 1.2;'>Quant Zosimaslen vit torner</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.1495 to fix "Sire Deus" spacing
@@ -310,6 +565,11 @@ process_line <- function(line) {
       return("<div style='line-height: 1.2;'>Non pas par bone enten [] cion</div>")
     }
         
+    # SPECIAL CASE: Hard-code line v.439 to correct spacing
+    if (line_count == 439) {
+      return("<div style='line-height: 1.2;'>Virge roine jo croi bien</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.449 to fix "Pere" repetition
     if (line_count == 449) {
       return("<div style='line-height: 1.2;'>molt fu grant merveille del Pere</div>")
