Corrected 'extensive' level of editing for vv.619 "ymage", 663 "si ert", & 666 "si ert" for Portraits pages and T-E.xml

--- a/portraits-viz.qmd
+++ b/portraits-viz.qmd
@@ -1377,7 +1377,7 @@ tant ala par jor & par nuis<br>
 Que tot devint iluec salvage<br>
 mais ele <span class="negation">ne</span> s'oblioit <span class="negation">mie</span><br>
 de proier a sainte Marie<br>
-Sovent li menbroit del image<br>
+Sovent li menbroit del ymage<br>
 Que ele avoit mis en ostage<br>
 Si drapel furent tost use<br>
 & si sollers tost desrame<br>
@@ -1421,10 +1421,10 @@ del bien faisoit <span class="negation">petit u nient<br></span>
 <span class="sequence-change">En un de ses pies li chaoit<br></span>
 de co estoit ele molt lie<br>
 Quant ele avoit la grant hascie<br>
-<span class="negation">N'estoit merveille</span> s'iert <span class="color-word">noircie<br></span>
+<span class="negation">N'estoit merveille</span> si ert <span class="color-word">noircie<br></span>
 car molt demenoit aspre vie<br>
 plus de .xl. ans a la nue<br>
-<span class="negation">N'iert par merveille</span> s'iert molsue<br>
+<span class="negation">N'iert par merveille</span> si ert molsue<br>
 povre despens avoit od li<br>
 <span class="unique-verse">Damedex</span> ait de li merci<br>
 .ii. pains avoit <span class="negation">ne gaires grans</span><br>
