--- a/portraits.qmd
+++ b/portraits.qmd
@@ -1300,7 +1300,7 @@ par bos par plains & par larris<br>
 Que tot devint iluec salvage<br>
 mais ele ne s'oblioit mie<br>
 de proier a sainte Marie<br>
-Sovent li menbroit del image<br>
+Sovent li menbroit del ymage<br>
 Que ele avoit mis en ostage<br>
 Si drapel furent tost use<br>
 & si sollers tost desrame<br>
@@ -1344,10 +1344,10 @@ Quant une espine le poignoit<br>
 En un de ses pies li chaoit<br>
 de co estoit ele molt lie<br>
 Quant ele avoit la grant hascie<br>
-N'estoit merveille s'iert noircie<br>
+N'estoit merveille si ert noircie<br>
 car molt demenoit aspre vie<br>
 plus de .xl. ans a la nue<br>
-N'iert par merveille s'iert molsue<br>
+N'iert par merveille si ert molsue<br>
 povre despens avoit od li<br>
 Damedex ait de li merci<br>
 .ii. pains avoit ne gaires grans<br>
