--- a/appendix2-T-F1.qmd
+++ b/appendix2-T-F1.qmd
@@ -216,9 +216,19 @@ process_line <- function(line) {
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
       
+    # SPECIAL CASE: Hard-code line v.8 to correct spacing
+    if (line_count == 8) {
+      return("<div style='line-height: 1.2;'>Sapar ole est aspre & dure .</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.10 to correct apostrophe
     if (line_count == 10) {
-      return("<div style='line-height: 1.2;'>e por samor mei escoter .</div>")
+      return("<div style='line-height: 1.2;'>e por sa amor mei escoter .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.15 to correct spacing
+    if (line_count == 15) {
+      return("<div style='line-height: 1.2;'>Quenul pecche est tant granz .</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.36 to correct apostrophe
@@ -246,6 +256,11 @@ process_line <- function(line) {
       return("<div style='line-height: 1.2;'>Desquele out passe duze anz .</div>")
     }
     
+    # SPECIAL CASE: Hard-code line v.115 to correct spacing
+    if (line_count == 115) {
+      return("<div style='line-height: 1.2;'>Tuit enveneient al bordal .</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.128 to correct apostrophe
     if (line_count == 128) {
       return("<div style='line-height: 1.2;'>e rent si espris de samor .</div>")
@@ -259,6 +274,11 @@ process_line <- function(line) {
     # SPECIAL CASE: Hard-code line v.134 to fix nesting tags issue
     if (line_count == 134) {
       return("<div style='line-height: 1.2;'>sentredonouent dono vent grant colees .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.138 to correct spacing
+    if (line_count == 138) {
+      return("<div style='line-height: 1.2;'>Nule pour nen enperneit .</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.156 to correct apostrophe
