Update column layout in appendix manuscript qmds

--- a/appendix2-T-E.qmd
+++ b/appendix2-T-E.qmd
@@ -1,5 +1,8 @@
 ---
 title: "T-E"
+format:
+  html:
+    page-layout: full
 ---
 
 # Paris, BnF Arsenal, 3516
@@ -11,7 +14,7 @@ Digitization available via Gallica [HERE](https://gallica.bnf.fr/ark:/12148/btv1
 library(xml2)
 ```
 
-::: {.column-body-outset}
+::: {.column-page-outset}
 ::: {layout="[[6,6,6]]"}
 
 ::: {.column}
