--- a/appendix2-T-B.qmd
+++ b/appendix2-T-B.qmd
@@ -1,5 +1,8 @@
 ---
 title: "T-B"
+format:
+  html:
+    page-layout: full
 ---
 
 # Oxford, Bodleian, Canonici Misc. 74
@@ -9,7 +12,7 @@ title: "T-B"
 library(xml2)
 ```
 
-::: {.column-body-outset}
+::: {.column-page-outset}
 ::: {layout="[[6,6,6,6]]"}
 
 ::: {.column}
