--- a/appendix2-T-F1.qmd
+++ b/appendix2-T-F1.qmd
@@ -5,11 +5,11 @@ format:
     page-layout: full
 ---
 
-# Manchester, John Rylands Library, French 6
+## Manchester, John Rylands Library, French 6
 
 Digitization available via The University of Manchester [HERE](https://luna.manchester.ac.uk/luna/servlet/detail/Man4MedievalVC~4~4~994331~227074?sort=reference_number%2Cimage_sequence_number%2Cparent_work_title%2Cdate_created&qvq=q:French%206;sort:reference_number%2Cimage_sequence_number%2Cparent_work_title%2Cdate_created;lc:Man4MedievalVC~4~4&mi=1&trs=4).
 
-```{r setup, include=FALSE}
+```{r tf1-setup, include=FALSE}
 # Load the xml2 package
 library(xml2)
 ```
@@ -18,9 +18,9 @@ library(xml2)
 ::: {layout="[[6,6,6,6]]"}
 
 ::: {.column}
-## Nearly Diplomatic
+### Nearly Diplomatic
 
-```{r results='asis'}
+```{r tf1-nearly-diplomatic, results='asis'}
 # START OF "NEARLY DIPLOMATIC" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-F1-nearly_diplomatic.xml")
@@ -85,9 +85,9 @@ cat(formatted_text)
 :::
 
 ::: {.column}
-## Minimal
+### Minimal
 
-```{r results='asis'}
+```{r tf1-minimal, results='asis'}
 # START OF "MINIMAL" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-F1.xml")
@@ -190,9 +190,9 @@ cat(formatted_text)
 :::
 
 ::: {.column}
-## Intermediate
+### Intermediate
 
-```{r results='asis'}
+```{r tf1-intermediate, results='asis'}
 # START OF "INTERMEDIATE" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-F1.xml")
@@ -370,9 +370,9 @@ cat(formatted_text)
 :::
 
 ::: {.column}
-## Extensive
+### Extensive
 
-```{r results='asis'}
+```{r tf1-extensive, results='asis'}
 # START OF "EXTENSIVE" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-F1.xml")
