--- a/appendix2-intro.qmd
+++ b/appendix2-intro.qmd
@@ -7,17 +7,17 @@ With the aim of enhancing both accessibility and transparency, in this appendix,
 
 For the T copies that have been digitized (T-A, T-D, T-E, T-F^1^, and T-F^2^), links to their digital surrogates are included at the top of each page. With the help of these digitizations, readers may consider my transcriptions and editing choices with greater scrutiny, but for the far more inaccessible T copies, most readers will simply have to trust my judgment. Regardless, this appendix offers a complementary resource, bridging the gap between modern reader and medieval manuscript.
 
-### General Features
+## General Features
 The line and folio numbering provided to the left of each column is specific to each manuscript copy. Breaks in the text column represent column breaks as they appear in each manuscript, and decorative initials appear in proportion to their size in the manuscript. Empty brackets (“[]”) indicate a hole or other physical damage in the parchment, and in rare cases where text has been rendered totally illegible due to damage — such as in copy T-E — question marks (“?”) have been added to represent missing characters.
 
-### Minimal
+## Minimal
 The “Minimal” column offers a transcription with a low level of editorial intervention, but this column should not be considered diplomatic. Word spacing in this column matches the original manuscript, but features like initial and final letter separation are not represented. Capitalization for most proper names like *Marie* and *Deu* has been added, but all other capitalization reflects the contents of the manuscript copy. The letters u/v and i/j have been adjusted where appropriate. Punctuation only appears in this column if it has been used by the medieval scribe, and scribal abbreviations are left unexpanded.
 
-### Intermediate
+## Intermediate
 In the “Intermediate” column, scribal abbreviations — such as &#xA76F; for “con/com” — are expanded to improve readability. However, all “et” symbols have been left unexpanded as ampersands (“&”) since this abbreviation is still widely used today. Similarly, numbering is presented as written by the scribe either as Roman numerals or spelled out in words.
 
-### Extensive
+## Extensive
 The “Extensive” column presents the transcription with further regularized spacing and spelling, including the addition of apostrophes to indicate contractions. Diacritical marks have not been added in the interests of improving searchability.
 
-### Nearly Diplomatic
+## Nearly Diplomatic
 In all but two of the T manuscripts (T-B and T-F^1^), the text was copied with line breaks in alignment with each verse, and so for copies T-B and T-F^1^, an additional column to the far left has been added labeled “Nearly Diplomatic.” These columns present a transcription with the “Minimal” level of intervention but also reflect the particular style in which the text was copied in each of these manuscripts. The T-B scribe copied two verses per line, indicating verse separation with a punctus, and the T-F^1^ scribe copied the verses in the style of prose, also using a punctus to separate each verse but otherwise paying no mind to the ends of verses or words to fill the writing space.
